[gd_scene load_steps=32 format=2]

[ext_resource path="res://core/player_FirstPerson/Player_Firstperson.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/untitled.obj" type="ArrayMesh" id=2]
[ext_resource path="res://fonts/pixel12x10/pixel12x10.tres" type="DynamicFont" id=3]
[ext_resource path="res://textures/floor.png" type="Texture" id=4]
[ext_resource path="res://textures/tv.png" type="Texture" id=5]
[ext_resource path="res://scenes/3d_GameManager.gd" type="Script" id=6]
[ext_resource path="res://textures/tv_static.png" type="Texture" id=7]
[ext_resource path="res://textures/Transition.png" type="Texture" id=8]
[ext_resource path="res://textures/batteries.png" type="Texture" id=9]
[ext_resource path="res://textures/floor-export.png" type="Texture" id=10]
[ext_resource path="res://textures/Doll.png" type="Texture" id=11]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 1, -1, 1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1, -1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98

[sub_resource type="Animation" id=5]
resource_name = "LowBatteries"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TV_Model/front_tv:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 4.87386e-13, 4.87386e-13 ),
"update": 1,
"values": [ 5, 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Static"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TV_Model/front_tv:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 8.89811e-07, 8.89811e-07, 8.89811e-07 ),
"update": 0,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "TV_Transition"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.07942, 2.48608, 3.69132 ), Vector3( -0.109804, 2.14754, 1.7399 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "TV_off"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TV_Model/front_tv:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Static"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TV_Model/front_tv:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=10]
resource_name = "TV_Transition"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.07942, 2.48608, 3.69132 ), Vector3( -0.109804, 2.14754, 1.7399 ) ]
}
tracks/2/type = "animation"
tracks/2/path = NodePath("../../Control/Transition_AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "FadeIn" ),
"times": PoolRealArray( 1.9 )
}

[sub_resource type="Animation" id=11]
resource_name = "TV_off"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TV_Model/front_tv:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1.10564, 1.72002, 0.119834 )

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
params_billboard_mode = 2
params_billboard_keep_scale = true
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98

[sub_resource type="SphereShape" id=14]
radius = 1.20102

[sub_resource type="BoxShape" id=15]

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true

[sub_resource type="BoxShape" id=17]
extents = Vector3( 0.137454, 0.0936491, 0.312679 )

[sub_resource type="Theme" id=18]
default_font = ExtResource( 3 )

[sub_resource type="Animation" id=19]
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="3d_Main" type="Spatial"]
script = ExtResource( 6 )

[node name="player_firstperson" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 0, 0, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
light_color = Color( 0.568627, 0.615686, 0.760784, 1 )
light_energy = 0.3

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 0.918764, 0.256722, -0.299946, 0, 0.759725, 0.650244, 0.394808, -0.597421, 0.698008, 0.2152, 4.4912, 0.513472 )
shadow_enabled = true
spot_range = 8.0

[node name="Room" type="Spatial" parent="."]

[node name="Room_Model" type="Spatial" parent="Room"]

[node name="floor_texture" type="Sprite3D" parent="Room/Room_Model"]
transform = Transform( 6, 0, 0, 0, -2.62268e-07, 1, 0, -6, -4.37114e-08, 0, 0.00999999, 0 )
material_override = SubResource( 1 )
texture = ExtResource( 4 )
hframes = 6

[node name="left_texture" type="Sprite3D" parent="Room/Room_Model"]
transform = Transform( 1.59259e-13, -9.77524e-07, 1, -6, -9.77524e-07, 0, 9.77524e-07, -6, -1.62921e-07, -3.33, 3.36, 0 )
material_override = SubResource( 1 )
texture = ExtResource( 10 )
hframes = 6
frame = 3

[node name="right_texture" type="Sprite3D" parent="Room/Room_Model"]
transform = Transform( 1.59259e-13, -9.77524e-07, -1, -6, -9.77524e-07, 0, -9.77524e-07, 6, -1.62921e-07, 3.33, 3.36, 0 )
material_override = SubResource( 1 )
texture = ExtResource( 4 )
hframes = 6
frame = 4

[node name="ceiling_texture" type="Sprite3D" parent="Room/Room_Model"]
transform = Transform( 6, 0, 0, 0, -9.77524e-07, -1, 0, 6, -1.62921e-07, 0, 4.62, 0 )
texture = ExtResource( 4 )
hframes = 6
frame = 1

[node name="back_texture" type="Sprite3D" parent="Room/Room_Model"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 1, 0, 4.8, -4.8 )
material_override = SubResource( 1 )
texture = ExtResource( 4 )
hframes = 6
frame = 2

[node name="front_texture" type="Sprite3D" parent="Room/Room_Model"]
transform = Transform( -6, 0, 3.25841e-07, 0, 6, 0, -1.95505e-06, 0, -1, 0, 4.8, 4.8 )
material_override = SubResource( 1 )
texture = ExtResource( 10 )
hframes = 6
frame = 5

[node name="floor" type="MeshInstance" parent="Room/Room_Model"]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 6, 0, -1, 0 )
visible = false
mesh = ExtResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Room_Model/floor"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Room_Model/floor/StaticBody"]
shape = SubResource( 2 )

[node name="floor4" type="MeshInstance" parent="Room/Room_Model"]
transform = Transform( 4, 0, 0, 0, -1.62921e-07, 6, 0, -1, -9.77524e-07, 0, 2.01492, -5.80034 )
visible = false
mesh = ExtResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Room_Model/floor4"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Room_Model/floor4/StaticBody"]
shape = SubResource( 2 )

[node name="floor5" type="MeshInstance" parent="Room/Room_Model"]
transform = Transform( 4, 0, 0, 0, -1.62921e-07, 6, 0, -1, -9.77524e-07, 0, 2.015, 5.82 )
visible = false
mesh = ExtResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Room_Model/floor5"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Room_Model/floor5/StaticBody"]
shape = SubResource( 2 )

[node name="floor2" type="MeshInstance" parent="Room/Room_Model"]
transform = Transform( -6.51683e-07, 1, 0, -4, -1.62921e-07, 0, 0, 0, 6, -4.34925, 2.22663, 0 )
visible = false
mesh = ExtResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Room_Model/floor2"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Room_Model/floor2/StaticBody"]
shape = SubResource( 2 )

[node name="floor3" type="MeshInstance" parent="Room/Room_Model"]
transform = Transform( -6.51683e-07, 1, 0, -4, -1.62921e-07, 0, 0, 0, 6, 4.349, 2.227, 0 )
visible = false
mesh = ExtResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Room_Model/floor3"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Room_Model/floor3/StaticBody"]
shape = SubResource( 2 )

[node name="TV" type="Spatial" parent="Room"]
transform = Transform( 0.799532, 0, -0.413217, 0, 0.9, 0, 0.413217, 0, 0.799532, 1.97145, -0.304888, -3.48009 )

[node name="Camera" type="Camera" parent="Room/TV"]
transform = Transform( 1.11098, -0.00295641, 0.017043, 0, 1.09476, 0.189905, -0.0172976, -0.189882, 1.09463, -0.098663, 2.27167, 2.45542 )
current = true

[node name="TV_Area" type="Area" parent="Room/TV"]
transform = Transform( 1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Room/TV/TV_Area"]
transform = Transform( 0.976931, 0, 0, 0, 0.957038, 0, 0, 0, 0.526745, 0, 1.89688, 0 )
shape = SubResource( 3 )

[node name="TV_Model" type="Spatial" parent="Room/TV"]

[node name="floor6" type="MeshInstance" parent="Room/TV/TV_Model"]
transform = Transform( -1.58469e-07, 0.972676, -1.49012e-08, -1.12582, -1.83419e-07, 0, -7.10543e-15, 2.98023e-08, 0.524356, -1.19209e-07, 1.44493, -0.000978947 )
visible = false
mesh = ExtResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/TV/TV_Model/floor6"]

[node name="CollisionShape" type="CollisionShape" parent="Room/TV/TV_Model/floor6/StaticBody"]
shape = SubResource( 2 )

[node name="front_tv" type="Sprite3D" parent="Room/TV/TV_Model"]
transform = Transform( 6, 0, -8.9407e-08, 0, 6, 0, 2.38419e-07, 0, 1, -1.19209e-07, 1.12887, 0.5 )
material_override = SubResource( 4 )
texture = ExtResource( 7 )
hframes = 6

[node name="antena_tv" type="Sprite3D" parent="Room/TV/TV_Model"]
transform = Transform( 6, 0, -2.98023e-08, 0, 6, 0, 2.38419e-07, 0, 1, -1.07288e-06, 2.04573, 0.0223775 )
material_override = SubResource( 4 )
texture = ExtResource( 5 )
hframes = 5
frame = 3
__meta__ = {
"_editor_description_": ""
}

[node name="top_tv" type="Sprite3D" parent="Room/TV/TV_Model"]
transform = Transform( 6, 0, 0, 0, -2.62268e-07, 1, 0, -6, -4.37114e-08, 0, 2.535, 0.98 )
material_override = SubResource( 4 )
texture = ExtResource( 5 )
hframes = 5
frame = 4

[node name="side_tv" type="Sprite3D" parent="Room/TV/TV_Model"]
transform = Transform( -9.53674e-07, 0, 1, 0, 6, 0, -6, 0, -1.49012e-07, 0.951721, 1.1, -0.458233 )
material_override = SubResource( 4 )
texture = ExtResource( 5 )
hframes = 5
frame = 2

[node name="side_tv2" type="Sprite3D" parent="Room/TV/TV_Model"]
transform = Transform( -9.53674e-07, 0, -1, 0, 6, 0, 6, 0, -1.78814e-07, -0.952, 1.1, 0.502529 )
material_override = SubResource( 4 )
texture = ExtResource( 5 )
hframes = 5
frame = 2

[node name="back_tv" type="Sprite3D" parent="Room/TV/TV_Model"]
transform = Transform( -6, 0, -2.98023e-07, 0, 6, 0, 1.90735e-06, 0, -1, 0, 1.1, -0.4052 )
material_override = SubResource( 4 )
texture = ExtResource( 5 )
hframes = 5
frame = 1

[node name="TV_AnimationPlayer" type="AnimationPlayer" parent="Room/TV"]
method_call_mode = 1
anims/LowBatteries = SubResource( 5 )
anims/Static = SubResource( 6 )
anims/TV_Transition = SubResource( 7 )
anims/TV_off = SubResource( 8 )

[node name="TV_AnimationPlayer2" type="AnimationPlayer" parent="Room/TV"]
method_call_mode = 1
anims/Static = SubResource( 9 )
anims/TV_Transition = SubResource( 10 )
anims/TV_off = SubResource( 11 )

[node name="Door" type="Spatial" parent="Room"]

[node name="Door_Area" type="Area" parent="Room/Door"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Door/Door_Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.39799, 1.76842, 4.71817 )
shape = SubResource( 12 )

[node name="Batteries" type="Spatial" parent="Room"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 2.36692, 0.68513, 3.35093 )

[node name="Sprite3D" type="Sprite3D" parent="Room/Batteries"]
transform = Transform( -5.66843, 1.91428, -0.0753577, 1.76889, 5.56431, 0.230305, 0.860181, 1.17217, -0.970196, 0, -0.559811, 0.349864 )
material_override = SubResource( 13 )
texture = ExtResource( 9 )

[node name="SpotLight2" type="SpotLight" parent="Room/Batteries"]
transform = Transform( -0.220477, 0.833851, -0.700465, 0.344149, 0.7314, 0.762353, 1.03321, -0.065685, -0.403403, -1.91249, 1.85759, -1.04086 )
light_energy = 0.5
shadow_enabled = true
spot_range = 8.0

[node name="Batteries_Area" type="Area" parent="Room/Batteries"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Batteries/Batteries_Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0288417, -0.466322, 0.27349 )
shape = SubResource( 14 )

[node name="Saw" type="Spatial" parent="Room"]
transform = Transform( 0.178702, 0, 0, 0, 1.3024, 0, 0, 0, 0.809799, -3.34227, 2.16177, -2.269 )

[node name="SawArea" type="Area" parent="Room/Saw"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Saw/SawArea"]
shape = SubResource( 15 )

[node name="Doll" type="Spatial" parent="Room"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 1, -0.611131, 0.680212, -3.77293 )

[node name="Sprite3D" type="Sprite3D" parent="Room/Doll"]
transform = Transform( 0.999999, 0, 0, 0, 0.841567, 0.0900253, 0, -3.24091, 0.841567, 0.000595413, -0.0552345, -0.821677 )
material_override = SubResource( 16 )
texture = ExtResource( 11 )
hframes = 4
frame = 3

[node name="DollArea" type="Area" parent="Room/Doll"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Doll/DollArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.045016, -0.0192457, -0.757447 )
shape = SubResource( 17 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interaction_Prompt" type="RichTextLabel" parent="Control"]
margin_top = 192.0
margin_right = 360.0
margin_bottom = 240.0
rect_clip_content = false
theme = SubResource( 18 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TransitionSprite" type="Sprite" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 180, 120 )
texture = ExtResource( 8 )

[node name="Transition_AnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/FadeIn = SubResource( 19 )
anims/FadeOut = SubResource( 20 )
[connection signal="area_entered" from="Room/TV/TV_Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Room/TV/TV_Area" to="." method="_on_Area_area_exited"]
[connection signal="animation_finished" from="Room/TV/TV_AnimationPlayer2" to="." method="_on_TV_AnimationPlayer2_animation_finished"]
[connection signal="area_entered" from="Room/Door/Door_Area" to="." method="_on_Door_Area_area_entered"]
[connection signal="area_exited" from="Room/Door/Door_Area" to="." method="_on_Door_Area_area_exited"]
[connection signal="area_entered" from="Room/Batteries/Batteries_Area" to="." method="_on_Batteries_Area_area_entered"]
[connection signal="area_exited" from="Room/Batteries/Batteries_Area" to="." method="_on_Batteries_Area_area_exited"]
[connection signal="area_entered" from="Room/Saw/SawArea" to="." method="_on_SawArea_area_entered"]
[connection signal="area_exited" from="Room/Saw/SawArea" to="." method="_on_SawArea_area_exited"]
[connection signal="area_entered" from="Room/Doll/DollArea" to="." method="_on_DollArea_area_entered"]
[connection signal="area_exited" from="Room/Doll/DollArea" to="." method="_on_DollArea_area_exited"]
